--- a/ux/assets/css/_colors.scss
+++ b/ux/assets/css/_colors.scss
@@ -2,3 +2,6 @@
 $color-black: #111111;
 $color-primary: #49beb7;
 $color-primary-light: #eafff7;
+
+
+@import "vue-multiselect/dist/vue-multiselect.css";
