Created search grapgs and brushin views

--- a/server/templates/brushing.html
+++ b/server/templates/brushing.html
@@ -42,12 +42,12 @@
             </a>
           </li>
           <li>
-            <a href="/brushing" class="nav-link">
+            <a href="/brushing" class="nav-link text-secondary">
               Brushing
             </a>
           </li>
           <li>
-            <a href="/searcher" class="nav-link text-secondary">
+            <a href="/searcher" class="nav-link">
               Buscador
             </a>
           </li>
