--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -27,7 +27,7 @@
         <a href="/" class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-white text-decoration-none">
           <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"></use></svg>
           <img
-          src="/static/media/logos/chromagens-logo.svg"
+          src="/static/media/logos/GSDPI-logo.png"
           alt="SVG image"
           width="40px"
           class="logo-img"
@@ -42,13 +42,13 @@
             </a>
           </li>
           <li>
-            <a href="/searcher" class="nav-link">
-              Buscador
+            <a href="/brushing" class="nav-link">
+              Brushing
             </a>
           </li>
           <li>
-            <a href="/gene" class="nav-link">
-              Genes
+            <a href="/searcher" class="nav-link">
+              Buscador
             </a>
           </li>
         </ul>
